<resources>
    <string name="app_name">prezzapp</string>
    <string name="prezzapp">PrezzApp</string>
    <string name="email">Email</string>
    <string name="prenom_nom_uha_fr">prenom.nom@uha.fr</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="vos_absences">Vos absences récentes</string>
    <string name="voir_plus">Voir plus</string>
    <string name="s_lectionner_un_fichier">Sélectionner un fichier</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="themesbr">☾</string>
</resources>