<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#F5F5F5">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/tata"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/prezzapp"
        android:layout_marginBottom="140dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/prenom_nom_uha_fr"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe"
        android:textStyle="bold"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/se_connecter"
        android:backgroundTint="@color/blue_logo"
        android:textColor="@color/white"
        android:elevation="2dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"/>
</LinearLayout>
