<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    tools:context=".StudentDashboardActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prezzapp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textColor="@color/orange_not_justified"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnToggleTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="🌙"
        android:background="@android:color/transparent"
        android:textColor="@color/blue_logo"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quitter"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/orange_not_justified"
        android:textSize="14sp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />
    <TextView
        android:id="@+id/tv_titre_absences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vos_absences"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue_logo"
        android:layout_marginTop="25dp"
        android:layout_marginStart="24dp"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_absences"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_titre_absences"
        app:layout_constraintBottom_toTopOf="@id/btn_voir_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_absence" />

    <Button
        android:id="@+id/btn_voir_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voir_plus"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:textColor="@color/blue_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
